cambions agregados con cmmir

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <h1>CPP del tio Pio</h1>
+    <h1>¿Que pasara con el internet? Lo veremos en el siguiente capitulo</h1>
 </body>
 </html>
